=head1 NAME

List of significant changes to Data::Tumbler

=encoding ISO8859-1

=cut

=head2 Changes in Data::Tumbler 0.003 - 16th March 2014

  Added dependency on Test::Most.
  Tweak the example in the docs.

=head2 Changes in Data::Tumbler 0.002 - 15th March 2014

  Remove Class::Tiny
  Add TODO and .travis.yml

=head2 Changes in Data::Tumbler 0.001 - 15th March 2014

  Initial release based on work in https://github.com/perl5-dbi/DBI-Test

=cut