@@ -5,11 +5,22 @@ use warnings;
 
 =head1 NAME
 
-Data::Tumbler - Dynamic generation of nested combinations
+Data::Tumbler - Dynamic generation of nested combinations of variants
 
 =head1 SYNOPSIS
 
-    my $tumbler = Data::Tumbler->new(
+    $tumbler = Data::Tumbler->new(
+
+        add_path => sub {
+            my ($path, $name) = @_;
+            return [ @$path, $name ];
+        },
+
+        add_context => sub {
+            my ($context, $value) = @_;
+            return [ @$context, $value ]
+        },
+
         consumer  => sub {
             my ($path, $context, $payload) = @_;
             print "@$path: @$context\n";
@@ -18,25 +29,96 @@ Data::Tumbler - Dynamic generation of nested combinations
 
     $tumbler->tumble(
         [   # provider code refs
-            sub { (red => 42, green => 24, blue => 19) },
+            sub { (red => 42, green => 24, mauve => 19) },
             sub { (circle => 1, square => 2) },
             # ...
         ],
-        [], # names
-        [], # values
-        [], # payload
+        [], # initial path
+        [], # initial context
+        [], # initial payload
     );
 
-Outputs:
+The consumer code outputs:
 
     green circle: 24 1
     green square: 24 2
-    blue circle: 19 1
-    blue square: 19 2
+    mauve circle: 19 1
+    mauve square: 19 2
     red circle: 42 1
     red square: 42 2
 
+Here's a longer example showing more features:
+
+    use List::Util qw(sum);
+
+    $tumbler = Data::Tumbler->new(
+
+        # The default add_path is as shown above
+        # The default add_context is as shown above
+
+        consumer  => sub {
+            my ($path, $context, $payload) = @_;
+            printf "path: %-20s  context: %-12s  payload: %s\n",
+                join("/",  @$path),
+                join(", ", @$context),
+                join(", ", map { "$_=>$payload->{$_}" } sort keys %$payload);
+        },
+    );
+
+    $tumbler->tumble(
+        [   # providers
+            sub {
+                my ($path, $context, $payload) = @_;
+
+                my %variants = (red => 42, green => 24, mauve => 19);
+
+                return %variants;
+            },
+            sub {
+                my ($path, $context, $payload) = @_;
+
+                # change paint to matt based on context
+                $payload->{paint} = 'matt' if sum(@$context) > 20;
+
+                my %variants = (circle => 10, square => 20);
+
+                # add an extra triangular variant for mauve
+                $variants{triangle} = 13 if grep { $_ eq 'mauve' } @$path;
+
+                return %variants;
+            },
+            sub {
+                my ($path, $context, $payload) = @_;
+
+                # skip all variants if path contains anything red or circular
+                return if grep { $_ eq 'red' or $_ eq 'circle' } @$path;
+
+                $payload->{spotty} = 1 if sum(@$context) > 35;
+
+                my %variants = (small => 17, large => 92);
+
+                return %variants;
+            },
+            # ...
+        ],
+        [], # initial path
+        [], # initial context
+        { paint => 'gloss' }, # initial payload
+    );
+
+The consumer code outputs:
+
+    path: green/square/large    context: 24, 20, 92    payload: paint=>matt, spotty=>1
+    path: green/square/small    context: 24, 20, 17    payload: paint=>matt, spotty=>1
+    path: mauve/square/large    context: 19, 20, 92    payload: paint=>gloss, spotty=>1
+    path: mauve/square/small    context: 19, 20, 17    payload: paint=>gloss, spotty=>1
+    path: mauve/triangle/large  context: 19, 13, 92    payload: paint=>gloss
+    path: mauve/triangle/small  context: 19, 13, 17    payload: paint=>gloss
+
 =head1 DESCRIPTION
+
+NOTE: This is alpha code and liable to change while it and L<Test::WriteVariants>
+mature.
 
 The tumble() method calls a sequence of 'provider' code references each of
 which returns a hash.  The first provider is called and then, for each hash
@@ -95,7 +177,7 @@ the existing context and the new value. The default is shown in the example abov
 use Storable qw(dclone);
 use Carp qw(confess);
 
-our $VERSION = '0.003';
+our $VERSION = '0.004';
 
 
 sub new {
