@@ -6,6 +6,10 @@ List of significant changes to Data::Tumbler
 
 =cut
 
+=head2 Changes in Data::Tumbler 0.004 - 22nd March 2014
+
+  Improve the docs with a more detailed example.
+
 =head2 Changes in Data::Tumbler 0.003 - 16th March 2014
 
   Added dependency on Test::Most.
